# fsm-px

./: CLAUDE.md  Cargo.toml  README.md  example-config.yaml
examples/: README-bpftrace.md  README-ebpf.md  README.md  SETUP_FROM_SCRATCH.md  audio-source.yaml  deploy-pixie.sh  kind-config.yaml  run.sh  run_w_pixie.sh  test-latency.sh
examples/audio-relay/: Dockerfile  audio-relay-server.py
examples/audio-source/: Dockerfile  audio-loop-server.py  go.mod  main.go
examples/bpf/: Dockerfile  Dockerfile.tc  Makefile  audio_tracer.c  audio_tracer_user.c  extract_interval_id.bt  go.mod  go.sum  packet_parser.bt  pod-sidecar-trace.yaml  tc_audio_tracer.c  tc_loader.go  tcpdump-ebpf.yaml
examples/bpftrace/: audio-latency.bt
examples/k8s/: bpftrace-daemonset.yaml  ebpf-audio-tracer.yaml  tc-bpf-tracer.yaml  tc-ebpf-tracer.yaml  tcpdump-debug.yaml
src/: bpftrace_reader.rs  config.rs  ebpf_processor.rs  main.rs  signature_detector.rs
